--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -38,6 +38,12 @@
         </android.support.design.widget.AppBarLayout>
 
         <Button
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/connectButton"
+            android:text="Connect"/>
+
+        <Button
             android:id="@+id/refreshButton"
             android:text="Refresh"
             android:layout_width="wrap_content"
