--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -55,6 +55,12 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content" />
 
+        <Button
+            android:id="@+id/frontporch_signInButton"
+            android:text="@string/action_sign_in_short"
+            android:layout_height="wrap_content"
+            android:layout_width="wrap_content" />
+
         <TextView
             android:id="@+id/numberViewer"
             android:text="Nothing Happened Yet"
