--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -57,7 +57,7 @@
 
         <Button
             android:id="@+id/frontporch_signInButton"
-            android:text="@string/action_sign_in"
+            android:text="@string/label_sign_in"
             android:layout_height="wrap_content"
             android:layout_width="wrap_content" />
 
