--- a/app/src/main/res/layout/activity_sign_in.xml
+++ b/app/src/main/res/layout/activity_sign_in.xml
@@ -11,12 +11,6 @@
               android:paddingTop="@dimen/activity_vertical_margin"
               android:weightSum="1"
               tools:context="edu.sjsu.posturize.posturize.SignInActivity">
-    <TextView
-        android:id="@+id/account_status"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="@string/signed_out"/>
-
 
     <ImageView
         android:id="@+id/posturize_picture"
@@ -34,17 +28,36 @@
         android:visibility="gone"/>
 
 
-    <Button
-        android:id="@+id/google_sign_out_button"
+    <TextView
+        android:id="@+id/account_status"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:visibility="gone"/>
+        android:text="@string/signed_out"/>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical">
 
-    <com.google.android.gms.common.SignInButton
-        android:id="@+id/google_sign_in_button"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="0dp"
-        android:alpha="0.8"/>
+        <CheckBox
+            android:id="@+id/remember_me"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="@string/remember_me"
+            android:textAlignment="center"
+            android:layout_gravity="center"/>
+        <com.google.android.gms.common.SignInButton
+            android:id="@+id/google_sign_in_button"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="0dp"
+            android:alpha="0.8"/>
+        <Button
+            android:id="@+id/google_sign_out_button"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="@string/action_google_sign_out"
+            android:visibility="gone"/>
+    </LinearLayout>
+
 
 </LinearLayout>
