--- a/app/src/main/res/layout/activity_sign_in.xml
+++ b/app/src/main/res/layout/activity_sign_in.xml
@@ -59,5 +59,12 @@
             android:visibility="gone"/>
     </LinearLayout>
 
+    <Button
+        android:id="@+id/continue_button"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Continue"
+        android:visibility="gone"/>
+
 
 </LinearLayout>
