--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -24,6 +24,12 @@
                 android:gravity="center_horizontal"
                 android:orientation="vertical">
 
+                <Button
+                    android:id="@+id/settings_button"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Settings"/>
+
                 <TextView
                     android:id="@+id/test"
                     android:layout_width="359dp"
