--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -15,37 +15,44 @@
         android:layout_weight="0.27">
 
         <ScrollView
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="match_parent">
 
             <LinearLayout
-                android:layout_width="wrap_content"
-                android:layout_height="match_parent"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
                 android:gravity="center_horizontal"
                 android:orientation="vertical">
+
                 <LinearLayout
                     android:layout_width="wrap_content"
-                    android:layout_height="wrap_content">
+                    android:layout_height="wrap_content"
+                    android:orientation="vertical">
+
                     <Button
                         android:id="@+id/preferences_button"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="Preferences"/>
+
                     <Button
                         android:id="@+id/calibration_button"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="Calibration"/>
+
                     <Button
                         android:id="@+id/bluetooth_button"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="Bluetooth"/>
+
                     <Button
                         android:id="@+id/settings_button"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="Settings"/>
+
                     <Button
                         android:id="@+id/sign_out_button"
                         android:layout_width="wrap_content"
@@ -54,37 +61,33 @@
 
                 </LinearLayout>
 
-                <TextView
-                    android:id="@+id/test"
-                    android:layout_width="359dp"
-                    android:layout_height="48dp"
-                    android:textSize="18dp" />
-
                 <Button
                     android:id="@+id/picDate"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:onClick="datePicker"/>
+
                 <TextView
-                    android:layout_below="@+id/picDate"
+                    android:id="@+id/showDate"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:id="@+id/showDate"
+                    android:layout_below="@+id/picDate"
                     android:textSize="18dp"/>
+
                 <com.jjoe64.graphview.GraphView
+                    android:id="@+id/graph"
                     android:layout_width="match_parent"
-                    android:layout_height="400dip"
-                    android:id="@+id/graph" />
+                    android:layout_height="400dip"/>
+
+                <android.support.design.widget.BottomNavigationView
+                    android:id="@+id/navigation"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_gravity="bottom"
+                    android:background="?android:attr/windowBackground"
+                    app:menu="@menu/navigation"/>
             </LinearLayout>
         </ScrollView>
     </FrameLayout>
-
-    <android.support.design.widget.BottomNavigationView
-        android:id="@+id/navigation"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_gravity="bottom"
-        android:background="?android:attr/windowBackground"
-        app:menu="@menu/navigation" />
 
 </LinearLayout>
