--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -9,6 +9,7 @@
     </style>
 
     <style name="AppTheme.NoActionBar">
+        <item name="colorPrimary">#f9f1a1</item>
         <item name="windowActionBar">false</item>
         <item name="windowNoTitle">true</item>
     </style>
