--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -6,13 +6,15 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context="edu.sjsu.posturize.posturize.HomeActivity">
+    tools:context="edu.sjsu.posturize.posturize.HomeActivity"
+    android:background="@drawable/orange_coral_background_gradient">
 
     <FrameLayout
         android:id="@+id/content"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_weight="0.27">
+        android:layout_weight="0.27"
+        >
 
         <ScrollView
             android:layout_width="match_parent"
@@ -33,31 +35,31 @@
                         android:id="@+id/preferences_button"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="Preferences"/>
+                        android:text="@string/preferences"/>
 
                     <Button
                         android:id="@+id/calibration_button"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="Calibration"/>
+                        android:text="@string/calibration"/>
 
                     <Button
                         android:id="@+id/bluetooth_button"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="Bluetooth"/>
+                        android:text="@string/bluetooth"/>
 
                     <Button
                         android:id="@+id/settings_button"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="Settings"/>
+                        android:text="@string/settings"/>
 
                     <Button
                         android:id="@+id/sign_out_button"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="Sign Out"/>
+                        android:text="@string/sign_out"/>
 
                 </LinearLayout>
 
@@ -71,8 +73,7 @@
                     android:id="@+id/showDate"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_below="@+id/picDate"
-                    android:textSize="18dp"/>
+                    android:textSize="18sp"/>
 
                 <com.jjoe64.graphview.GraphView
                     android:id="@+id/graph"
