--- a/app/src/main/res/layout/activity_sign_in.xml
+++ b/app/src/main/res/layout/activity_sign_in.xml
@@ -2,7 +2,7 @@
               xmlns:tools="http://schemas.android.com/tools"
               android:layout_width="match_parent"
               android:layout_height="match_parent"
-              android:background="@drawable/orange_coral_background_gradient"
+              android:background="@drawable/background"
               android:gravity="center_horizontal"
               android:orientation="vertical"
               android:paddingBottom="@dimen/activity_vertical_margin"
@@ -31,12 +31,13 @@
             android:text="@string/remember_me"
             android:textAlignment="center"
             android:layout_gravity="center"/>
+
         <com.google.android.gms.common.SignInButton
             android:id="@+id/google_sign_in_button"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginBottom="0dp"
-            android:alpha="0.8"/>
+            android:alpha="1"/>
 
     </LinearLayout>
 </LinearLayout>
