--- a/app/src/main/res/menu/side_nav_drawer.xml
+++ b/app/src/main/res/menu/side_nav_drawer.xml
@@ -1,9 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-<menu xmlns:android="http://schemas.android.com/apk/res/android">
+<menu xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:android="http://schemas.android.com/apk/res/android">
 
     <!--Group of Items for Side Nav View-->
+    <!--TODO: Update item images-->
 
-    <group android:checkableBehavior="single">
+    q<group android:checkableBehavior="single">
         <item
             android:id="@+id/nav_settings_button"
             android:icon="@drawable/googleg_disabled_color_18"
