--- a/app/src/main/res/drawable/side_nav_bar.xml
+++ b/app/src/main/res/drawable/side_nav_bar.xml
@@ -3,8 +3,7 @@
     <!--Gradient for Side Nav View-->
     <gradient
         android:angle="135"
-        android:centerColor="#4CAF50"
-        android:endColor="#2E7D32"
-        android:startColor="#81C784"
+        android:endColor="@color/colorAccent7"
+        android:startColor="@color/colorAccent4"
         android:type="linear" />
 </shape>
