--- a/app/src/main/res/layout/activity_home_content.xml
+++ b/app/src/main/res/layout/activity_home_content.xml
@@ -22,32 +22,53 @@
                 android:layout_height="match_parent"
                 android:gravity="center_horizontal"
                 android:orientation="vertical">
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:weightSum="2">
 
                     <Button
-                        android:id="@+id/picDate"
+                        android:id="@+id/add_point"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:onClick="datePicker" />
-
-                    <TextView
-                        android:id="@+id/showDate"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:textSize="18sp" />
-
-                    <com.jjoe64.graphview.GraphView
-                        android:id="@+id/graph"
-                        android:layout_width="match_parent"
-                        android:layout_height="400dp"/>
-
-                    <android.support.design.widget.BottomNavigationView
-                        android:id="@+id/navigation"
+                        android:text="Add"
+                        android:backgroundTintMode="@android:color/transparent"
+                        android:layout_weight="1"/>
+                    <Button
+                        android:id="@+id/delete_points"
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
-                        android:layout_gravity="bottom"
-                        android:layout_marginTop="20dp"
-                        android:background="?android:attr/windowBackground"
-                        app:menu="@menu/bottom_nav_menu" />
+                        android:backgroundTint="#FF0000"
+                        android:textSize="12sp"
+                        android:text="Remove User Data"
+                        android:layout_weight="1"/>
+                </LinearLayout>
+
+                <Button
+                    android:id="@+id/picDate"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:onClick="datePicker" />
+
+                <TextView
+                    android:id="@+id/showDate"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:textSize="18sp" />
+
+                <com.jjoe64.graphview.GraphView
+                    android:id="@+id/graph"
+                    android:layout_width="match_parent"
+                    android:layout_height="400dp"/>
+
+                <android.support.design.widget.BottomNavigationView
+                    android:id="@+id/navigation"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_gravity="bottom"
+                    android:layout_marginTop="20dp"
+                    android:background="?android:attr/windowBackground"
+                    app:menu="@menu/bottom_nav_menu" />
             </LinearLayout>
         </ScrollView>
     </FrameLayout>
