--- a/app/src/main/res/menu/side_nav_drawer.xml
+++ b/app/src/main/res/menu/side_nav_drawer.xml
@@ -26,5 +26,14 @@
             android:id="@+id/nav_sign_out_button"
             android:icon="@drawable/ic_home_black_24dp"
             android:title="Sign Out" />
+
+        <item
+            android:id="@+id/nav_about_us"
+            android:icon="@drawable/ic_home_black_24dp"
+            android:title="About Us" />
+        <item
+            android:id="@+id/nav_instructions"
+            android:icon="@drawable/ic_home_black_24dp"
+            android:title="Instructions" />
     </group>
 </menu>
